# annoymizer

./: README.md  main.py  pyproject.toml  requirements.txt
api/v1/endpoints/: __init__.py  aggregation.py  description.py  encrption.py  generalization.py  privacyprotectionmodel.py  randomization.py  router.py  session_management.py  suppression.py
data/: ftb_com_test.csv  npie_test.csv  people_info.csv  people_pain_info.csv  privacy_sample.csv
modules/: Aggregation.py  Encryption.py  Generalization.py  PrivacyProtectionModel.py  Randomization.py  Spark_Data_Processing.py  Suppression.py  __init__.py  dataframe_to_json.py
schema/: aggregation.py  encrption.py  generalization.py  privacyprotectionmodel.py  randomization.py  session_management.py  suppression.py
test_privacy_module/: privacy_module_create_session.py  privacy_module_delete_session.py  privacy_module_preview.py  privacy_module_result.py
