[tool.poetry]
name = "anonymizer"
version = "0.1.0"
description = ""
authors = ["kimseyeon <kimmk1199@douzone.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
requests = "^2.31.0"
uvicorn = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
